--- a/Toybox-2/style.css
+++ b/Toybox-2/style.css
@@ -47,7 +47,7 @@ body {
   width: 324px;
   height: 324px;
   display: grid;
-  grid-template-columns: repeat(6, 54px);
+  grid-template-columns: repeat(6, 54px); /* Adjust column definitions */
   grid-template-rows: repeat(6, 54px);
   gap: 2px;
   margin-bottom: 12px;
@@ -85,7 +85,7 @@ body {
 }
 
 .drop-zone-container {
-  width: 108px;
+  width: 108px; /* Two columns */
   height: 54px;
   border: 2px solid #6b4;
   display: flex;
