--- a/Toybox-3/style.css
+++ b/Toybox-3/style.css
@@ -19,6 +19,10 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
 
 h1 {
